# birthday-book-app

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md
bindings/book-node/: Cargo.toml  README.md  package.json
bindings/book-node/__test__/: index.spec.mjs
bindings/book-node/src/: lib.rs
bindings/bookjs/: Cargo.toml  Makefile  README.md  index.html  tsconfig.json
bindings/bookjs/src/: lib.rs
bindings/bookjs/ts/: index.html  main.ts
bindings/pybook/: Cargo.toml  README.md  pyproject.toml  test.py
bindings/pybook/src/: lib.rs
book/: Cargo.toml  README.md
book/src/: lib.rs
book/tests/: test.rs
