[package]
name = "book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.60" }
web-sys = { version = "0.3.61", features = ["Crypto"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

