[package]
name = "bookjs"
version = "0.1.0"
authors = ["Nicolás Hatcher <nicolas.hatcher@equalto.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
book = { path = "../../book" }
wasm-bindgen = "0.2.63"
tsify = "0.4.3"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
